<resources>
    <string name="app_name">DanceBot Editor</string>

    <string name="action_settings">Settings</string>
    <string name="btn_txt_open_media_library">Neues Projekt Starten</string>
    <string name="activity_label_media_library">Wäle dein Lieblingssong!</string>
    <string name="title_activity_editor">Editor</string>
    <string name="txt_title_song_info">Song Info</string>
    <string name="txt_song_title">Title:</string>
    <string name="txt_song_path">Pfad:</string>
    <string name="menu_editor_txt_open_music_file">Projekt Speichern</string>
    <string name="menu_editor_txt_save_music_file">MP3 Robot Speichern</string>
    <string name="alert_ask_exit_txt">Willst du die App beenden?</string>
    <string name="txt_yes">Ja</string>
    <string name="txt_no">Nein</string>
    <string name="txt_song_artist">Artist:</string>
    <string name="txt_song_duration">Länge:</string>
    <string name="txt_save">OK</string>
    <string name="txt_cancel">Abbrechen</string>
    <string name="txt_submenu_title">SubmenuTitle</string>
    <string name="menu_velocity_right">Geschwindigkeit Rechts</string>
    <string name="txt_play">Play</string>
    <string name="txt_pause">Pause</string>
    <string name="motor_type_straight">Geradeaus</string>
    <string name="motor_type_spin">Spin</string>
    <string name="motor_type_twist">Twist</string>
    <string name="motor_type_back_and_forth">Vor und Zurück</string>
    <string name="motor_type_constant">Individuell</string>
    <string name="motor_type_wait">Warten</string>
    <string name="led_type_knight_rider">Knight Rider</string>
    <string name="led_type_random">Zufällig</string>
    <string name="led_type_blink">Blinken</string>
    <string name="led_type_same_blink">Gleichmässig Blinken</string>
    <string name="led_type_constant">Konstant</string>
    <string name="txt_delete">Löschen</string>
    <string name="string_btn_ok">OK</string>
    <string name="btn_beatmenu_txt_cancel">Abbrechen</string>
    <string name="btn_beatmenu_txt_discard">Löschen</string>
    <string name="menu_motion_type">Bewegungsstil</string>
    <string name="menu_frequency">Frequenz</string>
    <string name="menu_velocity_left">Geschwindigkeit Links</string>
    <string name="menu_lights">Lichter</string>
    <string name="menu_lengths">Länge</string>
    <string name="txt_stream">stream</string>
    <string name="string_dance_sequence_menu_title">"Tanz Menü ab Element: "</string>
    <string name="string_ok_dialog_message">ok_dialog_message</string>
    <string name="string_ok_dialog_title">ok_dialog_title</string>
    <string name="string_btn_load_project">Projekt laden</string>
    <string name="string_encoding_started_message">Speichern des Songs läuft…</string>
    <string name="string_alert_save_file_message">Das ganze Projekt wird abgespeichert. Das kann ein bisschen dauern.</string>
    <string name="string_alert_save_file_title">Dancebot-MP3 speichern</string>
    <string name="last_edited">"Zuletzt editiert am: %s"</string>
    <string name="activity_label_project_library">Projektbibliothek</string>
    <string name="loading_song_message">Wir analysieren dein Lieblingssong und suchen nach passenden Beats.</string>
    <string name="splash_screen_message">DanceBot Editor v2.7182</string>
</resources>
