<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ch.ethz.asl.dancebots.danceboteditor.EditorActivity">

    <!-- TODO: Maybe better to make table view -->
    <TextView
        android:text="@string/txt_title_song_infos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/txt_song_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_song_title_id" />

    <TextView
        android:text="@string/txt_song_artist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_song_artist_id" />

    <TextView
        android:text="@string/txt_song_path"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_song_path_id" />

    <TextView
        android:text="@string/txt_song_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_song_duration_id" />

    <org.lucasr.twowayview.TwoWayView
        android:id="@+id/twoway_view"
        style="@style/TwoWayView"
        android:layout_width="wrap_content"
        android:layout_height="50px"
        android:drawSelectorOnTop="false"
        tools:context=".EditorActivity" />

</LinearLayout>
