<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/DialogMenuView">

    <RelativeLayout
        android:id="@+id/menu_item_motion_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/DialogMenuElement"
            android:text="@string/menu_motion_type"
            android:id="@+id/txt_motion_type"
            android:layout_alignParentLeft="true"/>

        <TextView
            style="@style/DialogMenuElement"
            android:text="defaultMotion"
            android:id="@+id/txt_motion_type_default"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/menu_item_frequency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/DialogMenuElement"
            android:text="@string/menu_frequency"
            android:id="@+id/txt_frequency"
            android:layout_alignParentLeft="true"/>

        <TextView
            style="@style/DialogMenuElement"
            android:text="defaultLength"
            android:id="@+id/txt_frequency_default"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/menu_item_velocity_left"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/DialogMenuElement"
            android:text="@string/menu_velocity_left"
            android:id="@+id/txt_velocity_left"
            android:layout_alignParentLeft="true"/>

        <TextView
            style="@style/DialogMenuElement"
            android:text="defaultVelocity"
            android:id="@+id/txt_velocity_left_default"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/menu_item_velocity_right"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/DialogMenuElement"
            android:text="@string/menu_velocity_right"
            android:id="@+id/txt_velocity_right"
            android:layout_alignParentLeft="true"/>

        <TextView
            style="@style/DialogMenuElement"
            android:text="defaultVelocity"
            android:id="@+id/txt_velocity_right_default"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/menu_item_lights"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/DialogMenuElement"
            android:text="@string/menu_lights"
            android:id="@+id/txt_lights"
            android:layout_alignParentLeft="true"/>

        <LinearLayout
            style="@style/DialogMenuElement"
            android:layout_alignParentRight="true">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1"
                android:id="@+id/light_check_box1"
                android:checked="false" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2"
                android:id="@+id/light_check_box2"
                android:checked="false" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3"
                android:id="@+id/light_check_box3"
                android:checked="false" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="4"
                android:id="@+id/light_check_box4" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="5"
                android:id="@+id/light_check_box5" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="6"
                android:id="@+id/light_check_box6" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="7"
                android:id="@+id/light_check_box7" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="8"
                android:id="@+id/light_check_box8" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/menu_item_length"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/DialogMenuElement"
            android:text="@string/menu_lengths"
            android:id="@+id/txt_length"
            android:layout_alignParentLeft="true"/>

        <TextView
            style="@style/DialogMenuElement"
            android:text="defaultLength"
            android:id="@+id/txt_length_default"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/menu_item_buttons">

        <Button
            style="@style/MenuButtonNegative"
            android:id="@+id/beatmenu_btn_discard"
            android:text="@string/btn_beatmenu_txt_discard" />

        <Button
            style="@style/MenuButtonPositive"
            android:id="@+id/beatmenu_btn_cancel"
            android:text="@string/btn_beatmenu_txt_cancel"
            android:layout_alignParentTop="true"
            android:layout_toStartOf="@+id/beatmenu_btn_ok" />

        <Button
            style="@style/MenuButtonPositive"
            android:id="@+id/beatmenu_btn_ok"
            android:text="@string/string_btn_ok"
            android:layout_alignParentRight="true" />
    </RelativeLayout>

</LinearLayout>